--- a/2024CUMCM/论文/src/D-Material.tex
+++ b/2024CUMCM/论文/src/D-Material.tex
@@ -31,12 +31,12 @@
 
 \section{支撑材料文件列表}
 
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[width=1.0\textwidth, keepaspectratio]{../res/end.png}
-	\caption{支撑材料文件列表}
-	\label{fig:支撑材料文件列表}
-\end{figure}
+%\begin{figure}[htbp]
+%	\centering
+%	\includegraphics[width=1.0\textwidth, keepaspectratio]{../res/end.png}
+%	\caption{支撑材料文件列表}
+%	\label{fig:支撑材料文件列表}
+%\end{figure}
 
 % =======================================
 % 程序代码
